test/files/neg/deprecated-options.scala
//
//> using options -Werror -deprecation -optimise -Xexperimental -Xfuture -Xsource:2.14
//
// Deprecated options are announced before compilation.
